# pyetimeoffice

./: .gitignore  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  setup.py
pyetimeoffice/: __init__.py  biometric.py
